# Developing-an-Artificial-Intelligence-based-influencer-application

./: .gitignore
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: agent.py  analytics.py  characters.py  drafts.py  images.py  personas.py  personas_db.py  trends.py
backend/app/core/: db.py  files.py  settings.py
backend/app/models/: persona.py
backend/app/services/: ai_image.py  ai_text.py  imagegen.py  persona_registry.py  trends.py
backend/app/services/images/: composite.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/app/: layout.jsx  routes.jsx
frontend/src/components/: CharacterCard.jsx  ChartCard.jsx  DraftCard.jsx  EmptyState.jsx  FeedStatsCard.jsx  IdeaCard.jsx  PersonaCard.jsx  Sidebar.jsx  Topbar.jsx  TrendChips.jsx
frontend/src/lib/: api.js  format.js
frontend/src/pages/: Analytics.jsx  Characters.jsx  Dashboard.jsx  Feed.jsx  Personas.jsx
frontend/src/styles/: globals.css
infra/: docker-compose.yml
